--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -9,6 +9,51 @@
         padding-inline: var(--winter-spacing-xs);
     }
 
+    body > header {
+        padding-top: 0.5rem;
+        border-bottom: var(--winter-header-divider);
+
+        & nav:first-of-type {
+            & ul {
+                & img.logo {
+                    display: none;
+                }
+            }
+        }
+
+        & nav {
+            & ul.has-dividers {
+                flex-direction: column;
+                align-items: flex-start;
+
+                & li,
+                li:not(:last-child) {
+                    margin-inline-start: 0;
+
+                    & a {
+                        &::after {
+                            content: "";
+                        }
+                    }
+                }
+            }
+
+            & ul:last-child {
+                align-items: flex-start;
+            }
+        }
+    }
+
+    body > footer {
+        flex-direction: column;
+        align-items: center;
+
+        & ul,
+        ul:first-child {
+            align-items: center;
+        }
+    }
+
     main {
         & h1,
         h2,
@@ -19,6 +64,10 @@
             & .headerlink {
                 display: none;
             }
+        }
+
+        & winter-audio-player {
+            max-width: 100%;
         }
     }
 }
