Initial version of <winter-pcb-assembly>

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -446,7 +446,8 @@ main {
                 background: var(--winter-table-striped-bg);
             }
 
-            &:hover {
+            &:hover,
+            &[aria-selected] {
                 background: var(--winter-table-hover-bg);
             }
         }
