--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -22,4 +22,25 @@ main {
             margin: 0;
         }
     }
+
+    & winter-pcb-assembly {
+        & canvas {
+            border-radius: 10px;
+
+            &.back {
+                transform: scaleX(-1);
+            }
+        }
+
+        & table.bom-table {
+            width: 100%;
+
+            & th:first-child,
+            td:first-child {
+                min-width: unset;
+                width: 2rem;
+                white-space: nowrap;
+            }
+        }
+    }
 }
