First stab at buttons and forms

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -247,7 +247,7 @@ Text inline content
 * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 main {
-    & a,
+    & a:not([role="button"]),
     [role="link"] {
         color: var(--winter-link-fg);
         background: var(--winter-link-bg);
