--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,6 +13,9 @@
 @import url("./nav.css");
 @import url("./footer.css");
 @import url("./content.css");
+@import url("./buttons.css");
+@import url("./forms.css");
+@import url("./group.css");
 @import url("./admonitions.css");
 @import url("./footnotes.css");
 @import url("./keys.css");
