--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -11,8 +11,13 @@ textarea {
     appearance: none;
 }
 
+/* Forms that appear within main should have some block spacing */
+main form {
+    margin-block: var(--winter-block-spacing);
+}
+
 /* Elements that create a new "block" */
-label:has(+ input) {
+label:has(+ input, + select, + textarea) {
     display: block;
 }
 
@@ -37,11 +42,16 @@ input:not(
     ),
 select,
 textarea {
+    --fg: var(--winter-input-fg);
+    --bg: var(--winter-input-bg);
+    --accent: var(--winter-input-accent);
+    --border: 1px solid var(--accent);
+
     outline: none;
-    border: var(--winter-input-border);
+    border: var(--border);
     border-radius: var(--winter-input-border-radius);
-    color: var(--winter-input-fg);
-    background: var(--winter-input-bg);
+    color: var(--fg);
+    background: var(--bg);
     font-size: var(--winter-input-font-size);
     font-weight: var(--winter-input-font-weight);
     box-shadow: var(--winter-input-shadow);
@@ -50,9 +60,9 @@ textarea {
     &:active,
     &:hover,
     &:focus {
-        color: var(--winter-input-active-fg);
-        background: var(--winter-input-active-bg);
-        border: var(--winter-input-active-border);
+        --fg: var(--winter-input-active-fg);
+        --bg: var(--winter-input-active-bg);
+        --accent: var(--winter-input-active-accent);
     }
 
     &:focus {
@@ -61,9 +71,9 @@ textarea {
     }
 
     &:disabled {
-        color: var(--winter-input-disabled-fg);
-        background: var(--winter-input-disabled-bg);
-        border: var(--winter-input-disabled-border);
+        --fg: var(--winter-input-disabled-fg);
+        --bg: var(--winter-input-disabled-bg);
+        --accent: var(--winter-input-disabled-accent);
 
         &:hover {
             cursor: not-allowed;
@@ -71,23 +81,23 @@ textarea {
     }
 
     &[readonly] {
-        color: var(--winter-input-readonly-fg);
-        background: var(--winter-input-readonly-bg);
-        border: var(--winter-input-readonly-border);
+        --fg: var(--winter-input-readonly-fg);
+        --bg: var(--winter-input-readonly-bg);
+        --accent: var(--winter-input-readonly-accent);
     }
 
     &:user-invalid,
     &[aria-invalid="true"] {
-        color: var(--winter-input-invalid-fg);
-        background: var(--winter-input-invalid-bg);
-        border: var(--winter-input-invalid-border);
+        --fg: var(--winter-input-invalid-fg);
+        --bg: var(--winter-input-invalid-bg);
+        --accent: var(--winter-input-invalid-accent);
     }
 
     &:user-valid,
     &[aria-invalid="false"] {
-        color: var(--winter-input-valid-fg);
-        background: var(--winter-input-valid-bg);
-        border: var(--winter-input-valid-border);
+        --fg: var(--winter-input-valid-fg);
+        --bg: var(--winter-input-valid-bg);
+        --accent: var(--winter-input-valid-accent);
     }
 }
 
@@ -155,6 +165,22 @@ input[type="radio"] {
 input[type="radio"] {
     --checked-char: "\e837";
     --unchecked-char: "\e836";
+}
+
+/* Adjacent checkboxes/radios */
+input[type="checkbox"] {
+    label:has(&) {
+        &:has(+ label > input[type="checkbox"]) {
+            margin-block-end: 0;
+        }
+    }
+}
+input[type="radio"] {
+    label:has(&) {
+        &:has(+ label > input[type="radio"]) {
+            margin-block-end: 0;
+        }
+    }
 }
 
 /* Range input */
@@ -230,6 +256,35 @@ input[type="range"] {
         --size: var(--winter-range-active-thumb-size);
         --fg: var(--winter-range-active-fg);
         --bg: var(--winter-range-active-bg);
+    }
+}
+
+/* Help text */
+input:not([type="checkbox"], [type="radio"]),
+select,
+textarea {
+    &:has(+ small) {
+        margin-block-end: 0;
+    }
+    & + small {
+        display: block;
+        width: 100%;
+        margin-block-end: var(--winter-input-block-spacing);
+        color: var(--winter-input-accent);
+    }
+
+    /* Validation states */
+    &:user-invalid,
+    &[aria-invalid="true"] {
+        & + small {
+            color: var(--winter-input-invalid-accent);
+        }
+    }
+    &:user-valid,
+    &[aria-invalid="false"] {
+        & + small {
+            color: var(--winter-input-valid-accent);
+        }
     }
 }
 
