Fixed headerlink specificity

--- a/src/styles/content.css
+++ b/src/styles/content.css
@@ -44,7 +44,7 @@ main {
             margin-block-start: var(--winter-heading-spacing);
         }
 
-        & .headerlink {
+        & a.headerlink {
             position: absolute;
             top: 0;
             left: -1.25ch;
