--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -19,3 +19,37 @@ body {
         margin-left: auto;
     }
 }
+
+.grid {
+    display: grid;
+    --min: 15ch;
+    --gap: 1rem;
+
+    display: grid;
+    grid-gap: var(--gap);
+    /* min() with 100% prevents overflow in extra narrow spaces */
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min)), 1fr));
+
+    &.col-2 {
+        grid-template-columns: 1fr 1fr;
+    }
+    &.col-3 {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    &.col-4 {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    &.col-1-2 {
+        grid-template-columns: 1fr 2fr;
+    }
+    &.col-2-1 {
+        grid-template-columns: 2fr 1fr;
+    }
+    &.col-1-3 {
+        grid-template-columns: 1fr 3fr;
+    }
+    &.col-3-1 {
+        grid-template-columns: 3fr 1fr;
+    }
+}
