--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -29,6 +29,7 @@ body {
     grid-gap: var(--gap);
     /* min() with 100% prevents overflow in extra narrow spaces */
     grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--min)), 1fr));
+    align-items: start;
 
     &.col-2 {
         grid-template-columns: 1fr 1fr;
