--- a/src/styles/forms.css
+++ b/src/styles/forms.css
@@ -39,6 +39,10 @@ main form {
 
         & .grid {
             --gap: 0.5rem 1.5rem;
+
+            & .grid {
+                --gap: 0.5rem 1rem;
+            }
         }
     }
 }
